# csrd-services

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  esrs_categories.json  pyproject.toml  sandbox.ipynb
csrd_services/: config.py  main.py
csrd_services/api/v1/: esrs_classifier.py
csrd_services/core/: embedder.py  esrs_classification.py  file_processing.py
csrd_services/lib/: embeddings.py
tests/core/: test_esrs_classification.py
